--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Kake Mutlimedia and ProdHMD's WordPress small theme for musicians.",
   "main": "./assets/js/dist/site",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "serve": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -26,7 +29,30 @@
     "url": "https://github.com/lljb3/Music-Evolver/issues"
   },
   "homepage": "https://github.com/lljb3/Music-Evolver#readme",
-  "dependencies": {
-    "npm": "^6.6.0"
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "barba.js": "^1.0.0",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
+    "image-webpack-loader": "^3.4.2",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
+    "npm": "^6.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
