--- a/package.json
+++ b/package.json
@@ -33,25 +33,31 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "barba.js": "^1.0.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "gulp-clean-css": "^4.0.0",
     "image-webpack-loader": "^3.4.2",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.5.3",
+    "npm": "^6.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
-    "npm": "^6.6.0",
+    "postcss-loader": "^3.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^0.6.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
