--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "barba.js": "^1.0.0",
@@ -51,7 +52,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "react": "^16.0.0",
+    "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
